unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Assignment_Hours_Remaining_from_Last_Wk__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Hours_Remaining_from_Last_Wk__c</fullName>
    <formula>pse__Assignment__r.Hours_Remaining__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignment Hours Remaining from Last Wk</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>