unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Assignment_Invoice_Rule__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Invoice_Rule__c</fullName>
    <formula>TEXT(pse__Assignment__r.Invoice_Rule__c)</formula>
    <label>Assignment Invoice Rule</label>
    <type>Text</type>
</CustomField>