unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Assignment_Name__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Name__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>pse__Assignment__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignment Name</label>
    <type>Text</type>
</CustomField>