unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Billable_Hours_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Billable_Hours_Submitted__c</fullName>
    <description>From the Assignment, the Billable Hours Submitted</description>
    <formula>pse__Assignment__r.pse__Billable_Hours_Submitted__c</formula>
    <label>Billable Hours Submitted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>