unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Deferred_Amount_to_be_Recognized__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Amount_to_be_Recognized__c</fullName>
    <label>Deferred Amount to be Recognized</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>