unpackaged/main/default/objects/pse__Timecard_Header__c/fields/F5_Product__c.field-meta.xml
<CustomField>
    <fullName>F5_Product__c</fullName>
    <label>F5 Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>(F5OS) BIG-IP Classic</fullName>
            </value>
            <value>
                <fullName>(TMOS) BIG-IP Classic</fullName>
            </value>
            <value>
                <fullName>Big-IP Classic</fullName>
                <isActive>false</isActive>
                <label>Big-IP Classic</label>
            </value>
            <value>
                <fullName>BIG-IP Next</fullName>
            </value>
            <value>
                <fullName>F5OS</fullName>
                <isActive>false</isActive>
                <label>F5OS</label>
            </value>
            <value>
                <fullName>F5XC</fullName>
            </value>
            <value>
                <fullName>NGINX</fullName>
            </value>
            <value>
                <fullName>Various</fullName>
                <label>Others</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>