unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Invoice_Method__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Method__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>pse__Milestone__r.Invoice_Method__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Method</label>
    <type>Text</type>
</CustomField>