unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Last_Date_Worked__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_Worked__c</fullName>
    <formula>IF( pse__Saturday_Hours__c &gt; 0,  pse__End_Date__c,
IF( pse__Friday_Hours__c &gt; 0, pse__End_Date__c -1,
IF( pse__Thursday_Hours__c &gt; 0, pse__End_Date__c -2,
IF( pse__Wednesday_Hours__c &gt; 0, pse__End_Date__c -3,
IF( pse__Tuesday_Hours__c &gt; 0, pse__End_Date__c -4,
IF( pse__Monday_Hours__c &gt;0, pse__End_Date__c -5,
IF( pse__Sunday_Hours__c &gt;0, pse__End_Date__c -6,
pse__Start_Date__c)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Date Worked</label>
    <type>Date</type>
</CustomField>