unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Milestone_Product__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Product__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>pse__Milestone__r.Product_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone Product</label>
    <type>Text</type>
</CustomField>