unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Mon_Travel_Hours__c.field-meta.xml
<CustomField>
    <fullName>Mon_Travel_Hours__c</fullName>
    <formula>IF(pse__Travel_Mon__c, pse__Monday_Hours__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mon Travel Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>