unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>