unpackaged/main/default/objects/pse__Timecard_Header__c/fields/NSP_Revenue_Rate__c.field-meta.xml
<CustomField>
    <fullName>NSP_Revenue_Rate__c</fullName>
    <formula>pse__Assignment__r.NSP_Revenue_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NSP Revenue Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>