unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Onsite__c.field-meta.xml
<CustomField>
    <fullName>Onsite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onsite</label>
    <type>Checkbox</type>
</CustomField>