unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <description>IT3029749. Field maps to Project Owner

pse__Project__r.Owner:User.FirstName  + " " +  pse__Project__r.Owner:User.LastName</description>
    <formula>pse__Project__r.Owner:User.FirstName  + " " +  pse__Project__r.Owner:User.LastName</formula>
    <inlineHelpText>Project Manager or Project Coordinator responsible for Operational functions on the Project such as:
Customer Engagement Scheduling, Resource Staffing, Assignment Mgmt, Billing/Revenue Recognition Mgmt.</inlineHelpText>
    <label>Project Owner</label>
    <type>Text</type>
</CustomField>