unpackaged/main/default/objects/pse__Timecard_Header__c/fields/PM_Approver__c.field-meta.xml
<CustomField>
    <fullName>PM_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PM Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Timecards</relationshipName>
    <type>Lookup</type>
</CustomField>