unpackaged/main/default/objects/pse__Timecard_Header__c/fields/PS_Consulting_Region__c.field-meta.xml
<CustomField>
    <fullName>PS_Consulting_Region__c</fullName>
    <formula>pse__Project__r.pse__Region__r.Name</formula>
    <inlineHelpText>This Field is defaulted from the Project. If it needs to be modified, do so from the Project page.</inlineHelpText>
    <label>Region</label>
    <type>Text</type>
</CustomField>