unpackaged/main/default/objects/pse__Timecard_Header__c/fields/PSA_Version__c.field-meta.xml
<CustomField>
    <fullName>PSA_Version__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <label>PSA Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>