unpackaged/main/default/objects/pse__Timecard_Header__c/fields/pse__Errors__c.field-meta.xml
<CustomField>
    <fullName>pse__Errors__c</fullName>
    <description>The error details when an async job fails.</description>
    <inlineHelpText>The error details when an async job fails.</inlineHelpText>
    <label>Errors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>