unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Recognized_Date__c.field-meta.xml
<CustomField>
    <fullName>Recognized_Date__c</fullName>
    <label>Recognized Date</label>
    <type>Date</type>
</CustomField>