unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Remote_Onsite__c.field-meta.xml
<CustomField>
    <fullName>Remote_Onsite__c</fullName>
    <formula>IF(Onsite__c, "Onsite", "Remote")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remote/Onsite</label>
    <type>Text</type>
</CustomField>