unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Sales_Order2__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order2__c</fullName>
    <description>For reporting purposes only where report is already grouped by SO# and also needs to be included in the report as a column value</description>
    <formula>Sales_Order__c</formula>
    <label>Sales Order #</label>
    <type>Text</type>
</CustomField>