unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <formula>pse__Project__r.Sales_Order_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order #</label>
    <type>Text</type>
</CustomField>