unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Send_to_AR__c.field-meta.xml
<CustomField>
    <fullName>Send_to_AR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to AR</label>
    <type>Checkbox</type>
</CustomField>