unpackaged/main/default/objects/pse__Timecard_Header__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <formula>pse__Assignment__r.Services_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SKU</label>
    <type>Text</type>
</CustomField>