unpackaged/main/default/objects/pse__Timecard_Header__c/fields/SKU_Hours_From_Opp__c.field-meta.xml
<CustomField>
    <fullName>SKU_Hours_From_Opp__c</fullName>
    <description>Hours purchased from the Opportunity record</description>
    <formula>pse__Assignment__r.pse__Planned_Hours__c</formula>
    <label>SKU Hours From Opp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>