unpackaged/main/default/objects/pse__Timecard_Header__c/fields/SKU_Hours_Purchased__c.field-meta.xml
<CustomField>
    <fullName>SKU_Hours_Purchased__c</fullName>
    <description>Field that pulls the PSA Hours Purchased data from the Opportunity Record</description>
    <formula>pse__Project__r.pse__Opportunity__r.PSA_Hours_Purchased__c</formula>
    <label>SKU Hours Purchased</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>