unpackaged/main/default/objects/pse__Timecard_Header__c/fields/SKU_Type__c.field-meta.xml
<CustomField>
    <fullName>SKU_Type__c</fullName>
    <formula>TEXT(pse__Assignment__r.Services_Product__r.PS_SKU_Type__c )</formula>
    <label>SKU Type</label>
    <type>Text</type>
</CustomField>