unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Sold_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Sold_Bill_Rate__c</fullName>
    <label>Sold Bill Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>