unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Sold_Billable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sold_Billable_Amount__c</fullName>
    <formula>IF( pse__Daily_Bill_Rate__c = TRUE,
Sold_Bill_Rate__c * pse__Total_Days_Worked__c,
Sold_Bill_Rate__c * pse__Total_Hours__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hours * Sold Bill Rate</inlineHelpText>
    <label>Sold Billable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>