unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Sun_Travel_Hours__c.field-meta.xml
<CustomField>
    <fullName>Sun_Travel_Hours__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>IF(pse__Travel_Sun__c, pse__Sunday_Hours__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sun Travel Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>