unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Theater__c.field-meta.xml
<CustomField>
    <fullName>Theater__c</fullName>
    <description>Auto-populated based on Region. If Top level Region is selected (Americas, EMEA, APCJ), Theater will be blank.</description>
    <label>Theater</label>
    <length>20</length>
    <type>Text</type>
</CustomField>