unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Timecard_Split_Count__c.field-meta.xml
<CustomField>
    <fullName>Timecard_Split_Count__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <label>Timecard Split Count</label>
    <summaryForeignKey>pse__Timecard__c.pse__Timecard_Header__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>