unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Total_Hours_Recognized__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Recognized__c</fullName>
    <description>Only showing the total hours for timecard that are Revenue Recognized</description>
    <formula>IF( ISPICKVAL(Revenue_Recognized__c, "Revenue Recognized"),  pse__Total_Hours__c , NULL)</formula>
    <label>Total Hours Recognized</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>