unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Total_Weekly_Onsite_Travel_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Weekly_Onsite_Travel_Hours__c</fullName>
    <formula>Sun_Travel_Hours__c + Mon_Travel_Hours__c + Tue_Travel_Hours__c + Wed_Travel_Hours__c  +Thu_Travel_Hours__c + Fri_Travel_Hours__c + Sat_Travel_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Weekly Onsite (Travel) Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>