unpackaged/main/default/objects/pse__Timecard_Header__c/validationRules/Cannot_enter_Negative_hours.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_enter_Negative_hours</fullName>
    <active>true</active>
    <description>This validation rules prevents the users from Enterting Negative hours on Timecards</description>
    <errorConditionFormula>AND(
NOT(INCLUDES($User.Special_Permissions__c, "Allow Negative Hours on Timecard")),
OR(pse__Monday_Hours__c &lt; 0, pse__Tuesday_Hours__c &lt; 0, pse__Wednesday_Hours__c &lt; 0, pse__Thursday_Hours__c &lt; 0, pse__Friday_Hours__c &lt; 0, pse__Saturday_Hours__c &lt; 0, pse__Sunday_Hours__c &lt; 0))</errorConditionFormula>
    <errorMessage>Negative hours are not allowed</errorMessage>
</ValidationRule>