unpackaged/main/default/objects/pse__Timecard_Header__c/validationRules/F5_Product_Required_TM_Milestones.validationRule-meta.xml
<ValidationRule>
    <fullName>F5_Product_Required_TM_Milestones</fullName>
    <active>false</active>
    <description>F5 Product field is required for T&amp;M Milestones</description>
    <errorConditionFormula>AND(
ISNEW (), 
pse__Milestone__r.RecordType.DeveloperName = "Task_Milestone",
ISPICKVAL( F5_Product__c, "")
)</errorConditionFormula>
    <errorMessage>You must select a value for F5 Product for T&amp;M Milestones.</errorMessage>
</ValidationRule>