unpackaged/main/default/objects/pse__Timecard_Header__c/validationRules/Partial_Hours_Lock.validationRule-meta.xml
<ValidationRule>
    <fullName>Partial_Hours_Lock</fullName>
    <active>true</active>
    <description>Do not allow consultants to entire partial hours in the Timecard</description>
    <errorConditionFormula>OR(
ROUND(pse__Sunday_Hours__c,0) &lt;&gt; pse__Sunday_Hours__c,  
ROUND(pse__Monday_Hours__c,0) &lt;&gt; pse__Monday_Hours__c,
ROUND(pse__Tuesday_Hours__c,0) &lt;&gt; pse__Tuesday_Hours__c, 
ROUND(pse__Wednesday_Hours__c,0) &lt;&gt; pse__Wednesday_Hours__c, 
ROUND(pse__Thursday_Hours__c,0) &lt;&gt; pse__Thursday_Hours__c, 
ROUND(pse__Friday_Hours__c,0) &lt;&gt; pse__Friday_Hours__c, 
ROUND(pse__Saturday_Hours__c,0) &lt;&gt; pse__Saturday_Hours__c 
)&amp;&amp;
DATEVALUE(CreatedDate) &gt;= DATE(2021,11,1)</errorConditionFormula>
    <errorMessage>No Partial Hours on Timecards</errorMessage>
</ValidationRule>