unpackaged/main/default/objects/pse__Timecard_Header__c/validationRules/TC_Milestone_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>TC_Milestone_Required</fullName>
    <active>true</active>
    <description>To make the MIlestone field mandatory for any PSA 2.0 records, but allow PSA 1.0 to be created without one.</description>
    <errorConditionFormula>AND( pse__Project__r.PSA_Version__c = "PSA 2.0", pse__Milestone__r.Name = "") &amp;&amp;
NOT(pse__Project__r.RecordTypeId = "0121T000000JBer") &amp;&amp;
NOT(pse__Project__r.RecordTypeId = "0121T000000JBes")</errorConditionFormula>
    <errorMessage>A Milestone is required to save this Timecard</errorMessage>
</ValidationRule>