unpackaged/main/default/objects/pse__Timecard_Header__c/listViews/Approved_TC_s_for_Billing_Events.listView-meta.xml
<ListView>
    <fullName>Approved_TC_s_for_Billing_Events</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7 AND 8 AND 9</booleanFilter>
    <columns>PSA_Version__c</columns>
    <columns>pse__Project__c</columns>
    <columns>Sales_Order__c</columns>
    <columns>Send_to_AR__c</columns>
    <columns>PS_Consulting_Region__c</columns>
    <columns>Owner__c</columns>
    <columns>SKU__c</columns>
    <columns>pse__Total_Hours__c</columns>
    <columns>pse__Bill_Rate__c</columns>
    <columns>Deferred_Amount_to_be_Recognized__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Exclude_from_Billing__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>SKU__c</field>
        <operation>notContain</operation>
        <value>INST</value>
    </filters>
    <filters>
        <field>PS_Consulting_Region__c</field>
        <operation>notContain</operation>
        <value>japan</value>
    </filters>
    <filters>
        <field>Send_to_AR__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>pse__Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>pse__Billable__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>pse__Billed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>pse__Invoiced__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>pse__Include_In_Financials__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>1. Approved TC's (AR) APCJ</label>
    <sharedTo>
        <group>PSA_Consulting_Mgmt_APCJ</group>
        <group>PSA_Project_Mgmt_APCJ</group>
    </sharedTo>
</ListView>