unpackaged/main/default/objects/pse__Timecard_Header__c/listViews/Approved_TC_s_for_Billing_Events3.listView-meta.xml
<ListView>
    <fullName>Approved_TC_s_for_Billing_Events3</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7 AND 8 AND 9 AND 10</booleanFilter>
    <columns>pse__Project__c</columns>
    <columns>Sales_Order__c</columns>
    <columns>pse__Approver__c</columns>
    <columns>SKU__c</columns>
    <columns>pse__Total_Hours__c</columns>
    <columns>pse__Bill_Rate__c</columns>
    <columns>PS_Consulting_Region__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>NAME</columns>
    <columns>Last_Date_Worked__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Exclude_from_Billing__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>PS_Consulting_Region__c</field>
        <operation>equals</operation>
        <value>JAPAN</value>
    </filters>
    <filters>
        <field>SKU__c</field>
        <operation>notContain</operation>
        <value>INST</value>
    </filters>
    <filters>
        <field>Revenue_Recognized__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Send_to_AR__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>pse__Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>pse__Billable__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>pse__Billed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>pse__Invoiced__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>pse__Include_In_Financials__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>TC's Approved (for Billing Events) JAPAN</label>
    <sharedTo>
        <group>PSA_Consulting_Mgmt_JAPAN</group>
        <group>PSA_Project_Mgmt_JAPAN</group>
    </sharedTo>
</ListView>