unpackaged/main/default/objects/pse__Timecard_Header__c/listViews/AR_Deferred_Revenue_to_be_Recognized.listView-meta.xml
<ListView>
    <fullName>AR_Deferred_Revenue_to_be_Recognized</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND (5 OR 6) AND 7</booleanFilter>
    <columns>Sales_Order__c</columns>
    <columns>Deferred_Amount_to_be_Recognized__c</columns>
    <columns>Project_Name__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Exclude_from_Billing__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Sales_Order__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>SKU__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Send_to_AR__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Revenue_Recognized__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Revenue_Recognized__c</field>
        <operation>equals</operation>
        <value>Resubmitted</value>
    </filters>
    <filters>
        <field>pse__Approved__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>2. TC Released (AR Processing)</label>
    <language>en_US</language>
    <sharedTo>
        <group>PSA_Consulting_Mgmt_AMER</group>
        <group>PSA_Consulting_Mgmt_APAC</group>
        <group>PSA_Consulting_Mgmt_EMEA</group>
        <group>PSA_Consulting_Mgmt_JAPAN</group>
        <group>PSA_Project_Mgmt_AMER</group>
        <group>PSA_Project_Mgmt_APAC</group>
        <group>PSA_Project_Mgmt_EMEA</group>
        <group>PSA_Project_Mgmt_JAPAN</group>
    </sharedTo>
</ListView>