unpackaged/main/default/objects/pse__Timecard_Header__c/listViews/Billable_TC_All_Lost_Found.listView-meta.xml
<ListView>
    <fullName>Billable_TC_All_Lost_Found</fullName>
    <columns>NAME</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Status__c</columns>
    <columns>SKU__c</columns>
    <columns>pse__Total_Hours__c</columns>
    <columns>pse__Assignment__c</columns>
    <columns>Sales_Order__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>pse__Billable__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>pse__External_Resource__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Time Cards: Kudelski Security</label>
    <language>en_US</language>
    <sharedTo>
        <group>PSA_Vendor_Partner_Kudelski</group>
    </sharedTo>
</ListView>