unpackaged/main/default/objects/pse__Timecard_Header__c/listViews/Excluded_Timecards_Needing_Rev_Rec_Amt.listView-meta.xml
<ListView>
    <fullName>Excluded_Timecards_Needing_Rev_Rec_Amt</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND (5 OR 6) AND 7</booleanFilter>
    <columns>Sales_Order__c</columns>
    <columns>SKU__c</columns>
    <columns>pse__Total_Hours__c</columns>
    <columns>pse__Bill_Rate__c</columns>
    <columns>Deferred_Amount_to_be_Recognized__c</columns>
    <columns>PS_Consulting_Region__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>Revenue_Recognized__c</columns>
    <columns>NAME</columns>
    <columns>Notes__c</columns>
    <columns>pse__Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Exclude_from_Billing__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Sales_Order__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>SKU__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Send_to_AR__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Revenue_Recognized__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Revenue_Recognized__c</field>
        <operation>equals</operation>
        <value>Resubmitted</value>
    </filters>
    <filters>
        <field>pse__Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>AR - Deferred Revenue to be Recognized</label>
    <language>en_US</language>
    <sharedTo>
        <group>PSA_Revenue_Accounting_AR</group>
    </sharedTo>
</ListView>