unpackaged/main/default/objects/pse__Timecard_Header__c/listViews/Incorrect_Approver.listView-meta.xml
<ListView>
    <fullName>Incorrect_Approver</fullName>
    <columns>NAME</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Approver__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Status__c</field>
        <operation>equals</operation>
        <value>Saved,Submitted</value>
    </filters>
    <filters>
        <field>Owner__c</field>
        <operation>equals</operation>
        <value>melanie kim</value>
    </filters>
    <filters>
        <field>pse__Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>4/1/2021</value>
    </filters>
    <label>Incorrect Approver</label>
    <sharedTo>
        <group>PSA_Reporting</group>
    </sharedTo>
</ListView>